# ai-learning-tools

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  vercel.json
backend/: pyproject.toml
backend/app/: config.py  evaluator.py  export.py  generator.py  main.py  orchestrator.py  pedagogy.py  pipeline.py  presets.py  preview_cache.py  schemas.py
backend/app/evaluator_prompts/grade-level/v1/: system.txt  user.txt
backend/app/prompts/: fiction.j2  non_fiction.j2
backend/tests/: test_api.py  test_config.py  test_evaluator.py  test_export.py  test_generator.py  test_orchestrator.py  test_pedagogy.py  test_pipeline.py  test_schemas.py
docs/: expansions_projects.md  v2-ideas.md
docs/superpowers/plans/: 2026-06-01-about-page-kickoff.md  2026-06-01-ui-iteration-v2-plan.md
docs/superpowers/specs/: 2026-05-30-learning-tools-design.md  2026-05-30-learning-tools-plan.md  2026-06-01-about-page-design.md  2026-06-01-ui-iteration-v2-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: AboutPage.css  AboutPage.test.tsx  AboutPage.tsx  App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: GeneratorView.tsx  PdfPreviewModal.test.tsx  PdfPreviewModal.tsx  RequestForm.test.tsx  RequestForm.tsx  SessionStreamer.tsx  StoryCard.test.tsx  StoryCard.tsx  StoryList.test.tsx  StoryList.tsx
frontend/src/lib/: sse.test.ts  sse.ts
skills/taste-skill/: skill.sh
skills/taste-skill/skills/: llms.txt
