[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "reportlab>=4.5.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
